[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Being.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 80.0062

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 36 )

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AttackCollider" parent="Scaling/AttackArea" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 2 )
disabled = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="StandTimer" type="Timer" parent="." index="3"]

[node name="BiteTimer" type="Timer" parent="." index="4"]

[connection signal="area_exited" from="Scaling/AttackArea" to="." method="_on_AttackArea_area_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="StandTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BiteTimer" to="." method="_on_BiteTimer_timeout"]
